<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_my_location"
        android:title="@string/action_my_location"
        android:orderInCategory="100"
        android:icon="@drawable/ic_my_location_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_hide_destination"
        android:title="@string/action_show_hide_destination"
        android:orderInCategory="100"
        android:icon="@drawable/ic_directions_bike_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_alarms"
        android:title="@string/action_show_alarms"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_black_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_add_alarm"
        android:title="@string/action_add_alarm"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_add_white_24dp"
        app:showAsAction="never" />
</menu>
