<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cambridge.hack.alarmbike.ui.alarms.AddAlarmActivity"
    tools:showIn="@layout/activity_add_alarm">

    <LinearLayout
        android:id="@+id/init_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_init_time"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="08:00"
            android:layout_marginBottom="16dp"
            android:id="@+id/tv_select_init_time"
            android:textSize="40sp"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_picker"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/init_picker"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_final_time"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="09:00"
            android:textSize="40sp"
            android:id="@+id/tv_select_final_time"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_select_only_tomorrow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_picker"
        android:layout_alignParentStart="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_select_only_tomorrow"
            android:layout_marginRight="8dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/only_for_tomorrow"
            android:id="@+id/textView6" />
    </LinearLayout>

</RelativeLayout>
